--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="text-center mb-4">
             <h1 class="display-4">Perfil Profesional</h1>
             <p class="lead">Desarrollador Web</p>
-            <img id="profileImg" src="https://via.placeholder.com/150" alt="Imagen de perfil" class="rounded-circle shadow-sm">
+            <img id="profileImg" src="C:\Users\Angelo\Documents\DWParcial1\desarrollowebparcial\foto.png" alt="Imagen de perfil" class="rounded-circle shadow-sm">
         </header>
 
         <section class="row">
