--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <main class="container my-5">
         <header class="text-center mb-4">
-            <h1 class="display-4">Perfil Profesional</h1>
+            <h1 class="display-4">Perfil Profesional Angelo Santos</h1>
             <p class="lead">Desarrollador Web</p>
             <img id="profileImg" src="C:\Users\Angelo\Documents\DWParcial1\desarrollowebparcial\foto.png" alt="Imagen de perfil" class="rounded-circle shadow-sm">
         </header>
